--- a/OldDriverManagerV2/App.config
+++ b/OldDriverManagerV2/App.config
@@ -2,12 +2,11 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="WpfBlazor.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="WpfBlazor.Shared.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="OldDriverManagerV2.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
-        <WpfBlazor.Settings>
+		<OldDriverManagerV2.Settings>
             <setting name="IsImgBlured" serializeAs="String">
                 <value>False</value>
             </setting>
@@ -20,11 +19,6 @@
             <setting name="SortFlag" serializeAs="String">
                 <value>0</value>
             </setting>
-        </WpfBlazor.Settings>
-        <WpfBlazor.Shared.Settings>
-            <setting name="CoverBlur" serializeAs="String">
-                <value>False</value>
-            </setting>
-        </WpfBlazor.Shared.Settings>
+        </OldDriverManagerV2.Settings>
     </userSettings>
 </configuration>
