--- a/OldDriverManagerV2/OldDriverManagerV2.csproj
+++ b/OldDriverManagerV2/OldDriverManagerV2.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-	<RootNamespace>WpfBlazor</RootNamespace>
+	<RootNamespace>OldDriverManagerV2</RootNamespace>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
