--- a/OldDriverManagerV2/OldDriverManagerV2.csproj
+++ b/OldDriverManagerV2/OldDriverManagerV2.csproj
@@ -6,6 +6,7 @@
     <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>driver.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
