--- a/OldDriverManagerV2/App.config
+++ b/OldDriverManagerV2/App.config
@@ -7,18 +7,21 @@
     </configSections>
     <userSettings>
 		<OldDriverManagerV2.Settings>
-            <setting name="IsImgBlured" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="RootPath" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="NumOfItems" serializeAs="String">
-                <value>20</value>
-            </setting>
-            <setting name="SortFlag" serializeAs="String">
-                <value>0</value>
-            </setting>
-        </OldDriverManagerV2.Settings>
+      <setting name="IsImgBlured" serializeAs="String">
+          <value>False</value>
+      </setting>
+      <setting name="RootPath" serializeAs="String">
+          <value />
+      </setting>
+      <setting name="NumOfItems" serializeAs="String">
+          <value>20</value>
+      </setting>
+      <setting name="SortFlag" serializeAs="String">
+          <value>0</value>
+      </setting>
+      <setting name="DarkMode" serializeAs="String">
+          <value>False</value>
+      </setting>
+  </OldDriverManagerV2.Settings>
     </userSettings>
 </configuration>
